--- a/text-classifier/python/SigOpt Text Classifier Walkthrough.ipynb
+++ b/text-classifier/python/SigOpt Text Classifier Walkthrough.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# SigOpt for ML: Automatically Tuning Text Classifiers Walkthrough\n",
-    "*This <a href=\"http://jupyter.readthedocs.org/en/latest/install.html\">Jupyter notebook</a> is a walkthrough companion for our blog post [SigOpt for ML: Automatically Tuning Text Classifiers](http://blog.sigopt.com/post/133089144983/sigopt-for-ml-automatically-tuning-text) by Research Engineer [Ian Dewancker](https://sigopt.com/about#ian)*\n",
+    "*This <a href=\"http://jupyter.readthedocs.org/en/latest/install.html\">Jupyter notebook</a> is a walkthrough companion for our blog post [SigOpt for ML: Automatically Tuning Text Classifiers](https://sigopt.com/blog/automatically-tuning-text-classifiers/) by Research Engineer [Ian Dewancker](https://sigopt.com/about#ian)*\n",
     "\n",
     "Text classification problems appear quite often in modern information systems, and you might imagine building a small document/tweet/blogpost classifier for any number of purposes. In this example, we're building a pipeline to label [Amazon product reviews](http://www.cs.jhu.edu/~mdredze/datasets/sentiment/) as either favorable or not. First, we'll use scikit-learn to build a logistic regression classifier, performing k-fold cross validation to measure the accuracy. Next, we'll use SigOpt to tune the hyperparameters of both the feature extraction and the model building. \n",
     "## Setup\n",
@@ -98,7 +98,7 @@
    "metadata": {},
    "source": [
     "## Logistic Regression Error Cost Parameters\n",
-    "Using the [SGDClassifier](http://scikit-learn.org/stable/modules/generated/sklearn.linear_model.SGDClassifier.html) class in scikit-learn, we can succinctly formulate and solve the logistic regression learning problem.  For a full description of the error function for logistic regression, see the [original blog post](http://blog.sigopt.com/post/133089144983/sigopt-for-ml-automatically-tuning-text). For brevity, we'll examine the exposed parameters of `alpha`, the weight of the [regularization](https://en.wikipedia.org/wiki/Regularization_(mathematics)) term in our cost function, and `l1_ratio`, which controls the [mixture](https://en.wikipedia.org/wiki/Elastic_net_regularization) of l1 and l2 regularization."
+    "Using the [SGDClassifier](http://scikit-learn.org/stable/modules/generated/sklearn.linear_model.SGDClassifier.html) class in scikit-learn, we can succinctly formulate and solve the logistic regression learning problem.  For a full description of the error function for logistic regression, see the [original blog post](https://sigopt.com/blog/automatically-tuning-text-classifiers/). For brevity, we'll examine the exposed parameters of `alpha`, the weight of the [regularization](https://en.wikipedia.org/wiki/Regularization_(mathematics)) term in our cost function, and `l1_ratio`, which controls the [mixture](https://en.wikipedia.org/wiki/Elastic_net_regularization) of l1 and l2 regularization."
    ]
   },
   {
@@ -123,7 +123,7 @@
     "\n",
     "Cross-validation requires us to split up our entire labeled dataset into two distinct sets: one to train on and one to validate our trained classifier on.  We then consider metrics like accuracy on only the validation set.  Taking this further and considering not one, but many possible splits of the labeled data is the idea of [k-fold cross-validation](https://en.wikipedia.org/wiki/Cross-validation_%28statistics%29#k-fold_cross-validation) where multiple training, validation sets are generated and validation metrics can be aggregated in several ways (e.g., mean, min, max) to give a single estimation of performance.\n",
     "\n",
-    "In this case, we’ll use the mean of the k-folded cross-validation accuracies (see the [original blog post](http://blog.sigopt.com/post/133089144983/sigopt-for-ml-automatically-tuning-text) for a further discussion). In our case, k=5 folds are used and the train and validation sets are split randomly using 70% and 30% of the entire dataset, respectively."
+    "In this case, we’ll use the mean of the k-folded cross-validation accuracies (see the [original blog post](https://sigopt.com/blog/automatically-tuning-text-classifiers/) for a further discussion). In our case, k=5 folds are used and the train and validation sets are split randomly using 70% and 30% of the entire dataset, respectively."
    ]
   },
   {
@@ -355,7 +355,7 @@
    "metadata": {},
    "source": [
     "# Closing Remarks\n",
-    "See the [original blog post](http://blog.sigopt.com/post/133089144983/sigopt-for-ml-automatically-tuning-text) for a discussion of results average over 20 runs of this optimization loop for grid search, random search, and SigOpt, all versus the baseline of no parameter tuning. (Hint: you see accuracy gains with parameter tuning.)\n",
+    "See the [original blog post](https://sigopt.com/blog/automatically-tuning-text-classifiers/) for a discussion of results average over 20 runs of this optimization loop for grid search, random search, and SigOpt, all versus the baseline of no parameter tuning. (Hint: you see accuracy gains with parameter tuning.)\n",
     "\n",
     "This short example scratches the surface of the types of ML related experiments one could conduct using SigOpt.  For example, SGDClassifier has lots of variations from which to select– another experiment might be to treat the loss function as a [categorical variable](https://sigopt.com/docs/objects/parameter).  What sort of models are you building that could benefit from better experimentation or optimization?  Stay tuned for more posts in our series on integrating SigOpt with various ML frameworks to solve **real problems more efficiently!**"
    ]
