modify README and links

--- a/metric-constraints-demo/sigopt_metric_constraints_demo.ipynb
+++ b/metric-constraints-demo/sigopt_metric_constraints_demo.ipynb
@@ -31,7 +31,7 @@
         "id": "SGFIbku-YmSX"
       },
       "source": [
-        "This Colab Notebook showcases the [Metric Constraints](https://app.sigopt.com/docs/overview/metric_constraints) feature in SigOpt, as described in [this blog post](https://sigopt.com/blog/metric-constraints-demo/). We use the Metric Constraints feature to optimize for the top-1 accuracy of a CNN with a constraint of the size of the network. We demonstrate this feature using the German Traffic Signs Dataset (GTSRB)."
+        "This Colab Notebook showcases the [Metric Constraints](https://docs.sigopt.com/advanced_experimentation/metric_constraints) feature in SigOpt, as described in [this blog post](https://sigopt.com/blog/metric-constraints-demo/). We use the Metric Constraints feature to optimize for the top-1 accuracy of a CNN with a constraint of the size of the network. We demonstrate this feature using the German Traffic Signs Dataset (GTSRB)."
       ]
     },
     {
@@ -70,7 +70,7 @@
         "id": "mITokjXjW7sm"
       },
       "source": [
-        "Loading Data. Refer to [this colab notebook](https://colab.research.google.com/drive/17wpJYYMOIzbnaW18Wn7dXT91ahRIJ0N_) on the data augmentation pipeline."
+        "Loading Data. Refer to [this colab notebook](https://colab.research.google.com/github/sigopt/sigopt-examples/blob/main/metric-constraints-demo/GTSRB_preprocessing_augmentation.ipynb) on the data augmentation pipeline."
       ]
     },
     {
