combine examples into one directory

--- a/xgboost-integration-examples/xgb-integration-py-reg.ipynb
+++ b/xgboost-integration-examples/xgb-integration-py-reg.ipynb
@@ -138,6 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#%pip install -r requirements.txt\n",
     "%pip install opendatasets #needed for Colab or if the opendatasets package is not installed\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
