--- a/xgboost-integration-examples/xgb-integration-py-class.ipynb
+++ b/xgboost-integration-examples/xgb-integration-py-class.ipynb
@@ -145,6 +145,7 @@
     }
    ],
    "source": [
+    "#%pip install -r requirements.txt\n",
     "%pip install opendatasets #needed for Colab or if the opendatasets package is not installed\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
