Clean up XGBoost integration examples (#268)
* Remove duplicate py files that don't work

* correct pip install

* no reqs

* fix notebook

* combine examples into one directory

* minor fixes

--- a/surprise-py-recsys/surprise_recommender.ipynb
+++ b/surprise-py-recsys/surprise_recommender.ipynb
@@ -276,9 +276,7 @@
     "\n",
     "As you can see from the above metric trajectory, we've improved markedly on our grid search results, and really only needed 40 or so experimentation loops for this particular problem. On your own, you may find that more epochs are required for improved performance on the larger (1M row) Movielens dataset.\n",
     "\n",
-    "Credit goes to Nicolas Hug from Facebook AI Research (FAIR) for implementing and maintaining scikit-surprise. You can find the documentation [here](https://surprise.readthedocs.io/en/stable/getting_started.html) from which these SigOpt-enhanced examples were developed, and without which this work would not be possible! Kudos to Nicolas for building such a simple and elegant library.\n",
-    "\n",
-    "If you'd like to try another Spark MLLib recommender system that uses Collaborative Filtering, you can [find that code example here](https://github.com/sigopt/sigopt-examples/tree/master/spark/recommender_sys)."
+    "Credit goes to Nicolas Hug from Facebook AI Research (FAIR) for implementing and maintaining scikit-surprise. You can find the documentation [here](https://surprise.readthedocs.io/en/stable/getting_started.html) from which these SigOpt-enhanced examples were developed, and without which this work would not be possible! Kudos to Nicolas for building such a simple and elegant library."
    ]
   },
   {
