--- a/xgboost-integration-examples/xgb-integration-py-class.ipynb
+++ b/xgboost-integration-examples/xgb-integration-py-class.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%pip install sigopt[xgboost] #this will install numpy and xgboost as dependencies\n",
+    "#%pip install 'sigopt[xgboost]' #this will install numpy and xgboost as dependencies\n",
     "import sigopt.xgboost"
    ]
   },
