--- a/xgboost-integration-examples/xgb-integration-py-reg.ipynb
+++ b/xgboost-integration-examples/xgb-integration-py-reg.ipynb
@@ -64,7 +64,7 @@
     }
    ],
    "source": [
-    "#%pip install sigopt[xgboost] #this will install numpy and xgboost as dependencies\n",
+    "#%pip install 'sigopt[xgboost]' #this will install numpy and xgboost as dependencies\n",
     "import sigopt.xgboost"
    ]
   },
