update some examples with values

--- a/xgboost-py-classifier/xgboost_py_classifier.ipynb
+++ b/xgboost-py-classifier/xgboost_py_classifier.ipynb
@@ -457,7 +457,7 @@
         " \n",
         "    conn.experiments(experiment.id).observations().create(\n",
         "        suggestion=suggestion.id,\n",
-        "        value=value\n",
+        "        values=[dict(name=\"AUUPRC\", value=value)]\n",
         "    )\n",
         "    \n",
         "    #update experiment object\n",
