text-classifier changes

--- a/text-classifier/python/SigOpt Text Classifier Walkthrough.ipynb
+++ b/text-classifier/python/SigOpt Text Classifier Walkthrough.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -47,18 +47,19 @@
    ],
    "source": [
     "import json, urllib\n",
-    "(negative_file, _ ) = urllib.urlretrieve(\n",
+    "(negative_file, _ ) = urllib.request.urlretrieve(\n",
     "    \"https://public.sigopt.com/NEGATIVE_list.json\",\n",
     "    \"NEGATIVE_LIST.json\"\n",
     ")\n",
-    "(positive_file, _) = urllib.urlretrieve(\n",
+    "(positive_file, _) = urllib.request.urlretrieve(\n",
     "    \"https://public.sigopt.com/POSITIVE_list.json\",\n",
     "    \"POSITIVE_LIST.json\"\n",
     ")\n",
+    "\n",
     "POSITIVE_TEXT = json.load(open(positive_file))\n",
     "NEGATIVE_TEXT = json.load(open(negative_file))\n",
-    "print \"POSITIVE: {}\".format(POSITIVE_TEXT[0])\n",
-    "print \"NEGATIVE: {}\".format(NEGATIVE_TEXT[0])"
+    "print (\"POSITIVE: {}\".format(POSITIVE_TEXT[0]))\n",
+    "print (\"NEGATIVE: {}\".format(NEGATIVE_TEXT[0]))"
    ]
   },
   {
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -111,7 +112,7 @@
    "source": [
     "from sklearn.linear_model import SGDClassifier\n",
     "# Create an SGDClassifier with default parameters\n",
-    "classifier = SGDClassifier(loss='log', penalty='elasticnet')"
+    "classifier = SGDClassifier(loss='log_loss', penalty='elasticnet')"
    ]
   },
   {
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -142,24 +143,23 @@
     }
    ],
    "source": [
-    "from sklearn import cross_validation\n",
-    "cv_split = cross_validation.ShuffleSplit(\n",
-    "    text_features.shape[0], \n",
-    "    n_iter=5, \n",
+    "from sklearn import model_selection\n",
+    "cv_split = model_selection.ShuffleSplit(\n",
+    "    n_splits=5, \n",
     "    test_size=0.3, \n",
     "    random_state=0\n",
     ")\n",
     "# Target classification of 1 for positive sentiment, -1 for negative\n",
     "target = [1] * len(POSITIVE_TEXT) + [-1] * len(NEGATIVE_TEXT)\n",
-    "cv_scores = cross_validation.cross_val_score(\n",
+    "cv_scores = model_selection.cross_val_score(\n",
     "    classifier, \n",
     "    text_features, \n",
     "    target, \n",
     "    cv=cv_split\n",
     ")\n",
     "import numpy\n",
-    "print \"Mean of 5-folded cross-validation accuracies: {}\".format(\n",
-    "    numpy.mean(cv_scores)\n",
+    "print (\"Mean of 5-folded cross-validation accuracies: {}\".format(\n",
+    "    numpy.mean(cv_scores))\n",
     ")"
    ]
   },
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -269,7 +269,7 @@
     "        'bounds': { 'min': 0.01, 'max': 0.25 }\n",
     "    }],\n",
     ")\n",
-    "print \"View your experiment details at https://sigopt.com/experiment/{0}\".format(experiment.id)"
+    "print (\"View your experiment details at https://sigopt.com/experiment/{0}\".format(experiment.id))"
    ]
   },
   {
@@ -282,10 +282,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def sentiment_metric(positive, negative, assignments):\n",
@@ -304,18 +302,17 @@
     "    alpha = math.exp(assignments['log_reg_coef'])\n",
     "    l1_ratio = assignments['l1_coef']\n",
     "    classifier = SGDClassifier(\n",
-    "        loss='log', \n",
+    "        loss='log_loss', \n",
     "        penalty='elasticnet', \n",
     "        alpha=alpha, \n",
     "        l1_ratio=l1_ratio\n",
     "    )\n",
-    "    cv = cross_validation.ShuffleSplit(\n",
-    "        text_features.shape[0], \n",
-    "        n_iter=5, \n",
+    "    cv = model_selection.ShuffleSplit(\n",
+    "        n_splits=5, \n",
     "        test_size=0.3, \n",
     "        random_state=0\n",
     "    )\n",
-    "    cv_scores = cross_validation.cross_val_score(classifier, text_features, target, cv=cv)\n",
+    "    cv_scores = model_selection.cross_val_score(classifier, text_features, target, cv=cv)\n",
     "    return numpy.mean(cv_scores)"
    ]
   },
@@ -334,14 +331,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "for i in range(60):\n",
-    "    print \"Training model candidate {0}\".format(i)\n",
+    "    print (\"Training model candidate {0}\".format(i))\n",
     "    suggestion = conn.experiments(experiment.id).suggestions().create()\n",
     "    opt_metric = sentiment_metric(POSITIVE_TEXT, NEGATIVE_TEXT, suggestion.assignments)\n",
     "    conn.experiments(experiment.id).observations().create(\n",
@@ -362,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -373,14 +370,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "best_observation = experiment.progress.best_observation\n",
-    "print \"Best value: {value}, found at:\\n{assignments}\".format(\n",
+    "print (\"Best value: {value}, found at:\\n{assignments}\".format(\n",
     "    value=best_observation.value, \n",
     "    assignments=json.dumps(\n",
     "        best_observation.assignments.to_json(),\n",
@@ -388,12 +385,12 @@
     "        indent=4, \n",
     "        separators=(',', ': ')\n",
     "    )\n",
-    ")"
+    "))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -415,7 +412,7 @@
     "    alpha = math.exp(assignments['log_reg_coef'])\n",
     "    l1_ratio = assignments['l1_coef']\n",
     "    classifier = SGDClassifier(\n",
-    "        loss='log', \n",
+    "        loss='log_loss', \n",
     "        penalty='elasticnet', \n",
     "        alpha=alpha, \n",
     "        l1_ratio=l1_ratio\n",
@@ -426,10 +423,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
@@ -442,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -453,15 +448,15 @@
     "    sentiment = best_classifier.predict(text_features)[0]\n",
     "    if verbose:\n",
     "        if sentiment == 1:\n",
-    "            print \"positive: {}\".format(text)\n",
+    "            print (\"positive: {}\".format(text))\n",
     "        else:\n",
-    "            print \"negative: {}\".format(text)\n",
+    "            print (\"negative: {}\".format(text))\n",
     "    return sentiment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -474,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -488,29 +483,29 @@
     }
    ],
    "source": [
-    "print \"View your final results at https://sigopt.com/experiment/{0}\".format(experiment.id)"
+    "print (\"View your final results at https://sigopt.com/experiment/{0}\".format(experiment.id))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
