vision-nas-search-keras-cifar-ray changes

--- a/vision-nas-search-keras-cifar-ray/mininas.ipynb
+++ b/vision-nas-search-keras-cifar-ray/mininas.ipynb
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "# Install prerequisites\n",
-    "!pip install -qqq ray[tune] pandas\n",
+    "!python3 -m pip install -qqq \"ray[tune]\" pandas\n",
     "\n",
     "# Download dataset\n",
     "from tensorflow.keras.datasets import cifar10\n",
@@ -114,7 +114,7 @@
     "    from tensorflow.keras.utils import to_categorical\n",
     "    model.compile(loss='categorical_crossentropy',\n",
     "      # Adam uses an adaptive learning rate that we do not explicitly tune this\n",
-    "      optimizer=keras.optimizers.Adam(lr=0.0001, decay=1e-6), metrics=['accuracy'])\n",
+    "      optimizer=keras.optimizers.Adam(learning_rate=0.0001, decay=1e-6), metrics=['accuracy'])\n",
     "\n",
     "    # Train the model\n",
     "    model.fit(X_train / 255.0, to_categorical(Y_train),\n",
@@ -305,12 +305,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "![SigOpt Sign-Up](https://sigopt.com/wp-content/uploads/2021/05/signup_screen.png)\n",
     "![Your API Key](https://sigopt.com/wp-content/uploads/2021/05/apikey.png)"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -321,7 +321,7 @@
    "outputs": [],
    "source": [
     "# Fill in your SigOpt key here\n",
-    "SIGOPT_TOKEN   = \"YOUR_SIGOPT_API_KEY_HERE\"\n",
+    "SIGOPT_TOKEN   = \"XWBIVDWCVQXALUZQFDHNGOELLLKDJBMOJALEPCNQXQGBNIGC\"\n",
     "SIGOPT_PROJECT = \"raytune-simplenas\"\n",
     "!pip install -qqq sigopt"
    ]
@@ -339,11 +339,11 @@
     "    c = []\n",
     "    for k, v in config.items():\n",
     "        print(k,v)\n",
-    "        if isinstance(v, ray.tune.sample.Float):\n",
+    "        if isinstance(v, ray.tune.search.sample.Float):\n",
     "            c.append({'name': k, 'type': 'double', 'bounds': {'min': v.lower, 'max': v.upper}})\n",
-    "        elif isinstance(v, ray.tune.sample.Integer):\n",
+    "        elif isinstance(v, ray.tune.search.sample.Integer):\n",
     "            c.append({'name': k, 'type': 'int', 'bounds': {'min': int(v.lower), 'max': int(v.upper)}})            \n",
-    "        elif isinstance(v, ray.tune.sample.Categorical):\n",
+    "        elif isinstance(v, ray.tune.search.sample.Categorical):\n",
     "            vals = [{'enum_index': i+1, 'name': str(z), 'object': 'categorical_value'} for i, z in enumerate(v.categories)]\n",
     "            c.append({'name': k, 'type': 'categorical', 'categorical_values': vals})\n",
     "        else: \n",
@@ -361,10 +361,11 @@
    },
    "outputs": [],
    "source": [
-    "import ray, os\n",
-    "from ray.tune.suggest.sigopt import SigOptSearch\n",
+    "import ray, os, sigopt\n",
+    "from ray.tune.search.sigopt import SigOptSearch\n",
     "from ray.tune.schedulers import FIFOScheduler\n",
-    "sigopt_connection = ray.tune.suggest.sigopt.Connection(client_token=SIGOPT_TOKEN)\n",
+    "sigopt_connection = sigopt.Connection(client_token=SIGOPT_TOKEN)\n",
+    "\n",
     "algo = SigOptSearch(\n",
     "    convert_space_to_sigopt(config),\n",
     "    name=SIGOPT_PROJECT,\n",
@@ -488,20 +489,20 @@
    ]
   },
   {
-   "source": [
-    "Feel free to [try this notebook out for yourself on Google Colab](https://colab.research.google.com/github/sigopt/sigopt-examples/blob/master/vision-nas-search-keras-cifar-ray/mininas.ipynb) or Intel's own [DevCloud](https://devcloud.intel.com/oneapi). Be sure to [sign up for free access to SigOpt](https://app.sigopt.com/signup), and start optimizing, tracking, and systematizing today."
-   ],
    "cell_type": "markdown",
    "metadata": {
     "id": "w50djSOlPb76"
-   }
+   },
+   "source": [
+    "Feel free to [try this notebook out for yourself on Google Colab](https://colab.research.google.com/github/sigopt/sigopt-examples/blob/master/vision-nas-search-keras-cifar-ray/mininas.ipynb) or Intel's own [DevCloud](https://devcloud.intel.com/oneapi). Be sure to [sign up for free access to SigOpt](https://app.sigopt.com/signup), and start optimizing, tracking, and systematizing today."
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "<a href=\"https://colab.research.google.com/github/sigopt/sigopt-examples/blob/master/vision-nas-search-keras-cifar-ray/mininas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
@@ -514,8 +515,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "name": "python392jvsc74a57bd0f372476770e59caf9f6716237107194f4112c515a6d1d4610e0b7bf397340878",
-   "display_name": "Python 3.9.2 64-bit ('xgb': conda)"
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -527,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
